# ml-examples

./: .gitignore
pytorch/: linear_dnn.py  pyproject.toml
pytorch/cat_classifier/: load_data.py  lr_model.py
pytorch/cat_detector/: dnn_model.py
pytorch/cifar10_classifier/: alex_net_model.py  load_data.py  train.py  train_vgg11.py  vgg_model.py
pytorch/f_mnist/: inference.py  le_net_model.py  load_data.py  train.py
pytorch/sign_detector/: cnn_model.py  inference.py  load_data.py
